fixed the create button stretching

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -8,13 +8,12 @@
   cursor: pointer;
   font-weight: bold;
   font-size: larger;
-  margin-left: 1vw;
 }
 
 .Header{
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
-  padding: 0;
-
+  padding-left: 1vw;
+  padding-right: 1vw;
 }
 .HeaderMenuLoggedIn{
   background-image: url("../../src/images/user.png");
